Fix text wrap in tiles

--- a/src/app/common/tile/tile.component.sass
+++ b/src/app/common/tile/tile.component.sass
@@ -9,6 +9,9 @@
     box-shadow: 2px 5px 9px 3px rgba(76, 96, 133, 0.17)
 
 .text-title
+  white-space: nowrap
+  overflow: hidden
+  text-overflow: ellipsis
   color: $textAccentColor
 
 .text-subtitle
